<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Taskader: Ежедневник</string>

    <string name="temp_text">Временный текст</string>
    <string name="search">Поиск...</string>

    <!--  Task  -->
    <string name="task_main_title">Добавить план на день</string>
    <string name="task_edit_title">Редактировать запись</string>
    <string name="task_button_add">Добавить</string>
    <string name="task_button_edit">Изменить</string>
    <string name="task_name">Введите запись</string>
    <string name="task_description">Описание</string>
    <string name="task_date_title_add">Выбрать дату</string>
    <string name="task_date_title">Дата</string>
    <string name="task_date_today">Сегодня</string>
    <string name="task_date_tomorrow">Завтра</string>
    <string name="task_date_threeDays">Через 3 дня</string>
    <string name="task_time_title_add">Выберите время</string>
    <string name="task_time_title">Время</string>
    <string name="task_time_clear">Очистить</string>
    <string name="task_time_start">Начало</string>
    <string name="task_time_end">Конец</string>
    <string name="task_time_blank">Нет</string>
    <string name="task_color">Цвет</string>
    <string name="task_reminder">Напоминание</string>
    <string name="task_repeat">Повторение</string>
    <string name="task_tag">Добавить метку</string>
    <string name="task_priority_default">Обычный приоритет</string>
    <string name="task_priority_high">Высокий приоритет</string>

    <!--  NEW TASK  -->
    <string name="fast_task_date">Срок выполнения</string>
    <string name="fast_task_priority">Приоритет</string>
    <string name="fast_task_color">Цвет</string>
    <string name="fast_task_date_short_1">янв.</string>
    <string name="fast_task_date_short_2">фев.</string>
    <string name="fast_task_date_short_3">мар.</string>
    <string name="fast_task_date_short_4">апр.</string>
    <string name="fast_task_date_short_5">май</string>
    <string name="fast_task_date_short_6">июн.</string>
    <string name="fast_task_date_short_7">июл.</string>
    <string name="fast_task_date_short_8">авг.</string>
    <string name="fast_task_date_short_9">сен.</string>
    <string name="fast_task_date_short_10">окт.</string>
    <string name="fast_task_date_short_11">ноя.</string>
    <string name="fast_task_date_short_12">дек.</string>

    <!--  TASK DURATION  -->
    <string name="task_duration_alert_title">Вы уверены?</string>
    <string name="task_duration_alert_text">Внесённые изменения будут удалены</string>
    <string name="task_duration_alert_ok_button">Удалить</string>
    <string name="task_duration_time_button">Добавить время</string>
    <string name="task_duration_time_allDay">Весь день</string>
    <string name="task_duration_save_button">Сохранить</string>

    <!--  Main Screen  -->
    <string name="main_count_task">Записей: </string>
    <string name="main_task_tab">Распорядок</string>
    <string name="main_note_tab">Заметка</string>
    <string name="main_low_priority">Обычное</string>
    <string name="main_high_priority">Важное</string>
    <string name="main_break">Перерыв</string>
    <string name="main_add_task">Добавить задачу</string>
    <string name="main_add_blank">На этот день нет записей</string>
    <string name="task_active">Активно</string>

    <!--  Note  -->
    <string name="note_blank">Напишите Вашу заметку на день</string>

    <!--  Reminder Dialog  -->
    <string name="reminder_title" tools:ignore="ExtraTranslation">Установить напоминание</string>

    <string name="close">Закрыть</string>
    <string name="apply">Сохранить</string>
    <string name="cancel">Отмена</string>

    <!--  Week Day  -->
    <string name="week_monday">Понедельник</string>
    <string name="week_tuesday">Вторник</string>
    <string name="week_wednesday">Среда</string>
    <string name="week_thursday">Четверг</string>
    <string name="week_friday">Пятница</string>
    <string name="week_saturday">Суббота</string>
    <string name="week_sunday">Воскресенье</string>
    <string name="week_unknown">Неизвестно</string>
    <string name="week_today">Сегодня</string>

    <!--  Buttons  -->
    <string name="button_delete">Удалить</string>
    <string name="button_complete">Завершить</string>
    <string name="button_uncomplete">Отменить</string>
    <string name="button_edit">Редактировать</string>

    <!--  HOME  -->
    <string name="home_title">Главная</string>
    <string name="home_folder_inbox">Входящие</string>
    <string name="home_folder_inbox_blank">Все задачи распределены</string>
    <string name="home_search">Поиск по задачам</string>
    <string name="home_add_task">Добавить быструю задачу</string>

    <!--  SETTINGS  -->
    <string name="settings_title">Настройки</string>
    <string name="settings_theme">Внешний вид</string>
    <string name="settings_theme_mode">Тема</string>
    <string name="settings_theme_mode_auto">Как в системе</string>
    <string name="settings_theme_mode_light">Светлая</string>
    <string name="settings_theme_mode_dark">Темная</string>
    <string name="settings_theme_navigation">Размер панели навигации</string>
    <string name="settings_theme_navigation_full">Средняя</string>
    <string name="settings_theme_navigation_compact">Компактная</string>
    <string name="settings_security">Безопасность</string>
    <string name="settings_security_fingerprint">Вход по отпечатку пальца</string>

    <string name="error_title">Ошибка</string>
    <string name="error">Возникла ошибка, попробуйте позже</string>
    <string name="fetch_error">Возникла ошибка получения данных, попробуйте позже</string>
    <string name="error_understand">Понятно</string>
    <string name="success">Закрыть</string>

    <!--  CALENDAR  -->
    <string name="month_january">Январь</string>
    <string name="month_february">Февраль</string>
    <string name="month_march">Март</string>
    <string name="month_april">Апрель</string>
    <string name="month_may">Май</string>
    <string name="month_june">Июнь</string>
    <string name="month_july">Июль</string>
    <string name="month_august">Август</string>
    <string name="month_september">Сентябрь</string>
    <string name="month_october">Октябрь</string>
    <string name="month_november">Ноябрь</string>
    <string name="month_december">Декабрь</string>
    <string name="month_unknown">Неизвестно</string>

    <string name="monday">пн</string>
    <string name="tuesday">вт</string>
    <string name="wednesday">ср</string>
    <string name="thursday">чт</string>
    <string name="friday">пт</string>
    <string name="saturday">сб</string>
    <string name="sunday">вс</string>

</resources>