<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    android:orientation="vertical"
    tools:context=".features.feature_settings.appearance.AppearanceFragment">

    <include layout="@layout/navbar" android:id="@+id/appearanceToolbar" />

    <LinearLayout
        android:id="@+id/settingTheme_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="18dp"
        android:paddingHorizontal="24dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_mode"
            android:textSize="16sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/settingTheme_mode_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_mode_auto"
            android:textSize="14sp"
            android:textColor="@color/textGray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingTheme_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="18dp"
        android:paddingHorizontal="24dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_navigation"
            android:textSize="16sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/settingTheme_navigation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_navigation_full"
            android:textSize="14sp"
            android:textColor="@color/textGray" />
    </LinearLayout>

</LinearLayout>