<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bgDialogNote"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bgDialogNote"
                app:srcCompat="@drawable/ic_add_close"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="@string/close" />
            <View
                android:id="@+id/view_offset_helper"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_delete"
                android:textColor="@color/black"
                android:layout_marginHorizontal="38dp"
                android:backgroundTint="@color/bottom_sheet_button_background" />
            <ImageButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bgDialogNote"
                app:srcCompat="@drawable/ic_add_check"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="@string/apply" />
        </LinearLayout>
        <EditText
            android:id="@+id/noteBody"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/note_background"
            android:textColor="@color/black"
            android:textColorHint="@color/textGray"
            android:hint="@string/note_blank"
            android:inputType="textCapSentences|textMultiLine"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="" />

    </LinearLayout>
</FrameLayout>
