<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background_fast_task"
    android:paddingVertical="18dp"
    android:paddingHorizontal="16dp">

    <EditText
        android:id="@+id/titleTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@null"
        android:paddingBottom="12dp"
        android:gravity="start"
        android:hint="@string/task_name"
        android:inputType="textCapSentences"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textColorHint="@color/textGray"
        android:textSize="20sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/descriptionTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:autofillHints=""
        android:background="@null"
        android:paddingBottom="8dp"
        android:gravity="start"
        android:hint="@string/task_description"
        android:inputType="textCapSentences|textMultiLine"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/black"
        android:textColorHint="@color/textGray"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="6dp" >
        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:id="@+id/taskDurationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_task_date"
                android:textColor="@color/fast_task_chip_color"
                app:chipBackgroundColor="@color/bottom_sheet_background"
                app:chipIcon="@drawable/ic_clock"
                app:chipIconSize="16dp"
                app:chipMinHeight="36dp"
                app:chipIconTint="@color/fast_task_chip_color"
                android:checkable="true"
                app:rippleColor="@color/fast_task_outline_ripple_color"
                app:chipStrokeColor="@color/fast_task_outline_border"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/taskPriorityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_task_priority"
                android:textColor="@color/fast_task_chip_color"
                app:chipBackgroundColor="@color/bottom_sheet_background"
                app:chipIcon="@drawable/ic_flag"
                app:chipIconSize="16dp"
                app:chipMinHeight="36dp"
                app:chipIconTint="@color/fast_task_chip_color"
                android:checkable="true"
                app:rippleColor="@color/fast_task_outline_ripple_color"
                app:chipStrokeColor="@color/fast_task_outline_border"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/taskColorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_task_color"
                android:textColor="@color/fast_task_chip_color"
                app:chipBackgroundColor="@color/bottom_sheet_background"
                app:chipIcon="@drawable/ic_settings_theme"
                app:chipIconSize="16dp"
                app:chipMinHeight="36dp"
                app:chipIconTint="@color/fast_task_chip_color"
                android:checkable="true"
                app:rippleColor="@color/fast_task_outline_ripple_color"
                app:chipStrokeColor="@color/fast_task_outline_border"/>
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
<!--            <Button-->
<!--                android:id="@+id/taskDate"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="44dp"-->
<!--                style="@style/Widget.Material3.Button.OutlinedButton.Icon"-->
<!--                android:text="@string/fast_task_date"-->
<!--                android:textColor="@color/textGray"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:paddingEnd="16dp"-->
<!--                app:icon="@drawable/ic_clock"-->
<!--                app:iconSize="14dp"-->
<!--                app:iconTint="@color/iconGray"-->
<!--                app:rippleColor="@color/fast_task_secondary_outline_ripple_color"-->
<!--                app:strokeColor="@color/fast_task_border" />-->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:text="@string/task_button_add"
        app:backgroundTint="@color/blue"
        android:textColor="@color/alwaysWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:rippleColor="@color/onPrimaryRipple"
        android:layout_gravity="end"
        android:layout_marginTop="6dp"/>
</LinearLayout>
